kubernetes/eks/sample-applications/game-2048/2048_full.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: game-2048
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: game-2048
  name: deployment-2048
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-2048
  replicas: 5
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-2048
    spec:
      containers:
      - image: alexwhen/docker-2048
        imagePullPolicy: Always
        name: app-2048
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: game-2048
  name: service-2048
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-2048
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: game-2048
  name: ingress-2048
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:786534693165:certificate/e3af1ec8-1936-4e7f-a1ee-0f0d44514139
    service.beta.kubernetes.io/aws-load-balancer-subnets: subnet-b927e895,subnet-4ad96202,subnet-0cd2ef10ceaba9910
    external-dns.alpha.kubernetes.io/hostname: 'game-2048.meta.spectrum.net'
    external-dns.alpha.kubernetes.io/ttl: "60"
    # alb.ingress.kubernetes.io/wafv2-acl-arn: 'arn:aws:wafv2:us-west-2:786534693165:regional/webacl/af-recovery-flow-uw2-acl/f2ee4033-f388-408c-ad76-50f632dae88a'
    alb.ingress.kubernetes.io/load-balancer-name: 'k8s-game2048-ingress2-7b991cbb5f'
    # alb.ingress.kubernetes.io/inbound-cidrs: '0.0.0.0/0'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    # alb.ingress.kubernetes.io/healthcheck-path: "/api/system/ping"
    # alb.ingress.kubernetes.io/success-codes: "200,404"
    # alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=3600

spec:
  rules:
    - host: game-2048.meta.spectrum.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-2048
                port:
                  number: 80
